test/Transforms/PolyLowering/poly_lowering_fail_affine_call_aux.llzk
// RUN: llzk-opt -I %S -split-input-file -llzk-full-poly-lowering -verify-diagnostics %s

#id = affine_map<(i) -> (i)>
!ToFelt = !struct.type<@TToFelt::@ToFelt<[#id]>>

module attributes {llzk.lang} {
  poly.template @TToFelt {
    poly.param @A

    struct.def @ToFelt {
      struct.member @out : !felt.type {llzk.pub}

      function.def @compute() -> !struct.type<@TToFelt::@ToFelt<[@A]>> {
        %self = struct.new : !struct.type<@TToFelt::@ToFelt<[@A]>>
        function.return %self : !struct.type<@TToFelt::@ToFelt<[@A]>>
      }

      function.def @constrain(%self: !struct.type<@TToFelt::@ToFelt<[@A]>>) {
        function.return
      }

    }

    function.def private @make() -> !struct.type<@TToFelt::@ToFelt<[@A]>> attributes {extern}

  }

  struct.def @UsesAffineCall {
    struct.member @out : !felt.type

    function.def @compute() -> !struct.type<@UsesAffineCall> {
      %self = struct.new : !struct.type<@UsesAffineCall>
      function.return %self : !struct.type<@UsesAffineCall>
    }

    function.def @constrain(%self: !struct.type<@UsesAffineCall>)
        attributes {function.allow_constraint, function.allow_witness} {
      %lb = arith.constant 0 : index
      %ub = arith.constant 2 : index
      %step = arith.constant 1 : index
      scf.for %i = %lb to %ub step %step {
        // expected-error@+1 {{cannot rebuild affine-instantiated function.call in compute-side auxiliary expression}}
        %payload = function.call @TToFelt::@make(){(%i)} : () -> !ToFelt
        %value = struct.readm %payload[@out] : !ToFelt, !felt.type
        %square = felt.mul %value, %value : !felt.type, !felt.type
        %quad = felt.mul %square, %square : !felt.type, !felt.type
        %out = struct.readm %self[@out] : !struct.type<@UsesAffineCall>, !felt.type
        constrain.eq %out, %quad : !felt.type
      }
      function.return
    }
  }
}
